# EvolutionaryComputationLab

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CommonLib/: CMakeLists.txt
CommonLib/include/: AppInfo.h  LoggerInitializer.h  dummy.h
CommonLib/src/: AppInfo.cpp  JsonFile.cpp  dummy.cpp
EvolutionaryAgentApp/: CMakeLists.txt
EvolutionaryAgentApp/src/: main.cpp
EvolutionaryAgentLib/: CMakeLists.txt
EvolutionaryAgentLib/include/: TcpSocket.h
EvolutionaryAgentLib/src/: TcpSocket.cpp
EvolutionaryComputationApp/: CMakeLists.txt
EvolutionaryComputationApp/src/: main.cpp
EvolutionaryComputationLab/: CMakeLists.txt
EvolutionaryComputationLab/include/: EchoManager.h
EvolutionaryComputationLab/src/: EchoManager.cpp  main.cpp
EvolutionaryComputationLabUI/: CMakeLists.txt  settings.json
EvolutionaryComputationLabUI/src/: Application.cpp
EvolutionaryComputationNode/: CMakeLists.txt  settings.json
EvolutionaryComputationNode/include/: Application.h
EvolutionaryComputationNode/src/: main.cpp
EvolutionaryComputationNodeLib/: CMakeLists.txt
EvolutionaryComputationNodeLib/src/: GeneticAlgorithm.cpp
EvolutionaryComputationNodeTest/: CMakeLists.txt
EvolutionaryComputationNodeTest/src/: main.cpp
EvolutionaryComputationUI/: CMakeLists.txt  CMakeLists.txt.shared  DesktopUI.qmlproject  DesktopUI.qmlproject.qtds  DesktopUI.qrc  qds.cmake  qtquickcontrols2.conf
EvolutionaryComputationUI/App/: CMakeLists.txt
EvolutionaryComputationUI/App/autogen/: environment.h
EvolutionaryComputationUI/App/src/: Application.cpp
EvolutionaryComputationUI/DesktopUI/: Constants.qml  qmldir
EvolutionaryComputationUI/DesktopUI/designer/: plugin.metainfo
EvolutionaryComputationUI/DesktopUIContent/: App.qml  CMakeLists.txt  MainScreen.ui.qml  Screen01.ui.qml
EvolutionaryComputationUI/include/: Application.h  Backend.h  MainWindow.h  environment.h
EvolutionaryComputationUI/src/: Application.cpp  Backend.cpp  MainWindow.cpp  main.cpp
EvolutionaryComputationUI/ui/: CMakeLists.txt  DesktopUI.qmlproject  DesktopUI.qmlproject.qtds  qds.cmake
EvolutionaryComputationUI/ui/App/: main.cpp
EvolutionaryComputationUI/ui/App/autogen/: environment.h
EvolutionaryComputationUI/ui/Backend/: BackendObject.qml  CMakeLists.txt  qmldir
EvolutionaryComputationUI/ui/DesktopUI/: CMakeLists.txt
EvolutionaryComputationUI/ui/DesktopUIContent/: App.qml  CMakeLists.txt  MainScreen.qml  ModeButtonBar.ui.qml  NodesWidget.ui.qml  TasksWidget.ui.qml  WelcomeScreen.ui.qml  WelcomeWidget.ui.qml  Z_MainScreen.qml
EvolutionaryNodeApp/: CMakeLists.txt  settings.json
EvolutionaryNodeApp/src/: Application.cpp  main.cpp
EvolutionaryNodeLib/: CMakeLists.txt
EvolutionaryNodeLib/include/: GeneticAlgorithm.h  TcpServer.h  TcpServerPtr.h
EvolutionaryNodeLib/src/: GeneticAlgorithm.cpp  TcpServer.cpp  TcpSocket.cpp
EvolutionaryNodeTest/: CMakeLists.txt
EvolutionaryNodeTest/src/: main.cpp
MessageAPI/: CMakeLists.txt
MessageAPI/include/: AbstractMessage.h  AbstractNotification.h  AbstractReply.h  AbstractRequest.h  AuthorizationReply.h  AuthorizationRequest.h
MessageAPI/src/: AbstractMessage.cpp  AbstractNotification.cpp  AbstractReply.cpp  AbstractRequest.cpp  AuthorizationReply.cpp  AuthorizationRequest.cpp
NetworkLib/: CMakeLists.txt
NetworkLib/include/: AbstractClient.h  AbstractServer.h  AbstractSocket.h  Client.h  ClientPtr.h  TcpClient.h  TcpClientPtr.h  TcpServer.h  TcpServerPtr.h  TcpSocket.h  TcpSocketPtr.h
NetworkLib/src/: AbstractClient.cpp  AbstractServer.cpp  AbstractSocket.cpp  Client.cpp  TcpClient.cpp  TcpSocket.cpp
doc/: architecture.drawio
docs/: architecture.drawio
